package com.example.realbreadbeta.modelo;

public class Oferta {

    private Integer urlImagen;

    public Oferta(Integer urlImagen) {
        this.urlImagen = urlImagen;
    }

    public Integer getUrlImagen() {
        return urlImagen;
    }

    public void setUrlImagen(Integer urlImagen) {
        this.urlImagen = urlImagen;
    }
}
