@startuml

title __REALBREADBETA.APP's Class Diagram__\n

  namespace com.example.realbreadbeta {
    class com.example.realbreadbeta.Bolleria {
    }
  }
  

  namespace com.example.realbreadbeta {
    class com.example.realbreadbeta.BuildConfig {
    }
  }
  

  namespace com.example.realbreadbeta {
    class com.example.realbreadbeta.CartActivity {
    }
  }
  

  namespace com.example.realbreadbeta {
    class com.example.realbreadbeta.CategoriasActivity {
    }
  }
  

  namespace com.example.realbreadbeta {
    class com.example.realbreadbeta.MainActivity {
    }
  }
  

  namespace com.example.realbreadbeta {
    class com.example.realbreadbeta.Pizza {
    }
  }
  

  namespace com.example.realbreadbeta {
    class com.example.realbreadbeta.ProductosActivity {
    }
  }
  

  namespace com.example.realbreadbeta {
    class com.example.realbreadbeta.ProfileActivity {
    }
  }
  

  namespace com.example.realbreadbeta {
    namespace adaptador {
      class com.example.realbreadbeta.adaptador.CategoriasAdaptador {
      }
    }
  }
  

  namespace com.example.realbreadbeta {
    namespace adaptador {
      class com.example.realbreadbeta.adaptador.OfertasAdaptador {
      }
    }
  }
  

  namespace com.example.realbreadbeta {
    namespace adaptador {
      class com.example.realbreadbeta.adaptador.ProductosDestacadosAdaptador {
      }
    }
  }
  

  namespace com.example.realbreadbeta {
    namespace modelo {
      class com.example.realbreadbeta.modelo.Categorias {
      }
    }
  }
  

  namespace com.example.realbreadbeta {
    namespace modelo {
      class com.example.realbreadbeta.modelo.Ofertas {
      }
    }
  }
  

  namespace com.example.realbreadbeta {
    namespace modelo {
      class com.example.realbreadbeta.modelo.Productos {
      }
    }
  }
  

  namespace com.example.realbreadbeta {
    namespace modelo {
      class com.example.realbreadbeta.modelo.ProductosDeCategoria {
      }
    }
  }
  

  com.example.realbreadbeta.Bolleria -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.realbreadbeta.CartActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.realbreadbeta.CategoriasActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.realbreadbeta.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.realbreadbeta.MainActivity o-- com.example.realbreadbeta.adaptador.CategoriasAdaptador : categoriasAdaptador
  com.example.realbreadbeta.MainActivity o-- com.example.realbreadbeta.adaptador.OfertasAdaptador : ofertasAdaptador
  com.example.realbreadbeta.MainActivity o-- com.example.realbreadbeta.adaptador.ProductosDestacadosAdaptador : productosDestacadosAdaptador
  com.example.realbreadbeta.Pizza -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.realbreadbeta.ProductosActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.realbreadbeta.ProfileActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.realbreadbeta.adaptador.CategoriasAdaptador -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.example.realbreadbeta.adaptador.OfertasAdaptador -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.example.realbreadbeta.adaptador.ProductosDestacadosAdaptador -up-|> androidx.recyclerview.widget.RecyclerView.Adapter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
